--- a/misc/iphotoHelperModule.plist
+++ b/misc/iphotoHelperModule.plist
@@ -1,4 +1,4 @@
-<!--Example malicious plist from Chapter 5->
+<!--Example malicious plist from Chapter 5-->
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN">
 <plist version="1.0">
